ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder__c/CnP_PaaS__CnP_Auto_Responder__c.object-meta.xml
<CustomObject>
    <label>C&amp;P Autoresponder</label>
    <nameField>
        <label>Responder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;P Autoresponder</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>