ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder__c/fields/CnP_PaaS__Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Activity_Type__c</fullName>
    <label>Activity Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>