ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder__c/fields/CnP_PaaS__American_Express__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__American_Express__c</fullName>
    <defaultValue>false</defaultValue>
    <label>American Express</label>
    <type>Checkbox</type>
</CustomField>