ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder__c/fields/CnP_PaaS__C_P_Account_Names__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__C_P_Account_Names__c</fullName>
    <label>C&amp;P Account Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>