ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder__c/fields/CnP_PaaS__Campain_Math_Condition__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Campain_Math_Condition__c</fullName>
    <label>Campain Math Condition</label>
    <length>10</length>
    <type>Text</type>
</CustomField>