ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder__c/fields/CnP_PaaS__CC_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CC_Email_Address__c</fullName>
    <label>CC Email Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>