ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder__c/fields/CnP_PaaS__Clickandpledge_SMTP__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Clickandpledge_SMTP__c</fullName>
    <label>Clickandpledge SMTP</label>
    <length>25</length>
    <type>Text</type>
</CustomField>