ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder__c/fields/CnP_PaaS__CnP_API_Settings__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_API_Settings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C&amp;P Account Name</label>
    <referenceTo>CnP_PaaS__CnP_API_Settings__c</referenceTo>
    <relationshipLabel>C&amp;P Autoresponder</relationshipLabel>
    <relationshipName>C_P_Auto_Responder_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>