ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder__c/fields/CnP_PaaS__Credit_card__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Credit_card__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Credit Card</label>
    <type>Checkbox</type>
</CustomField>