ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder__c/fields/CnP_PaaS__Delayed_day__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Delayed_day__c</fullName>
    <label>Delayed day</label>
    <length>255</length>
    <type>Text</type>
</CustomField>