ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder__c/fields/CnP_PaaS__Discover__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Discover__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discover</label>
    <type>Checkbox</type>
</CustomField>