ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder__c/fields/CnP_PaaS__Future_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Future_Transaction_Type__c</fullName>
    <label>Future Transaction Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>