ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder__c/fields/CnP_PaaS__Mail_From_Name__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Mail_From_Name__c</fullName>
    <label>Mail From Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>