ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder__c/fields/CnP_PaaS__Mail_to__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Mail_to__c</fullName>
    <label>Mail To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Payee</fullName>
                <default>true</default>
                <label>Payee</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>