ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder__c/fields/CnP_PaaS__Responder_Type__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Responder_Type__c</fullName>
    <label>Responder Type</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>