ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder__c/fields/CnP_PaaS__Send_Option__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Send_Option__c</fullName>
    <label>Send Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>