ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder__c/fields/CnP_PaaS__Sent_Count__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Sent_Count__c</fullName>
    <label>Sent Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>