ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder__c/fields/CnP_PaaS__SMS_Autoresponder_Info__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__SMS_Autoresponder_Info__c</fullName>
    <label>SMS_Autoresponder_Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>