ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder__c/fields/CnP_PaaS__SMS_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__SMS_Start_Date_Time__c</fullName>
    <label>SMS Start Date Time</label>
    <type>DateTime</type>
</CustomField>