ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder__c/fields/CnP_PaaS__SMTP_settings__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__SMTP_settings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SMTP settings</label>
    <referenceTo>CnP_PaaS__SMTP_settings__c</referenceTo>
    <relationshipName>C_P_Auto_Responder_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>