ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder__c/fields/CnP_PaaS__Specific_date__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Specific_date__c</fullName>
    <label>Specific date</label>
    <type>Date</type>
</CustomField>