ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder__c/fields/CnP_PaaS__Specific_date_and_time__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Specific_date_and_time__c</fullName>
    <label>Specific date and time</label>
    <type>DateTime</type>
</CustomField>