ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder__c/fields/CnP_PaaS__Stop_dele__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Stop_dele__c</fullName>
    <label>Stop delivery</label>
    <length>10</length>
    <type>Text</type>
</CustomField>