ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__CnP_Auto_Responder__c/fields/CnP_PaaS__Subscription_Installment_type__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Subscription_Installment_type__c</fullName>
    <label>Subscription Installment type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>